# adzuna-job-market-elt

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: my_comsos_dag.py
airflow/dags/dbt_project/: dbt_project.yml
airflow/dags/dbt_project/models/: schema.yml  sources.yml  unittesting.yml
airflow/dags/dbt_project/models/dim/: dim_category_cleansed.sql  dim_company_cleansed.sql  dim_location_cleansed.sql
airflow/dags/dbt_project/models/fct/: fct_job_postings_cleansed.sql
airflow/dags/dbt_project/models/mart/: mart_job_market_overview.sql
airflow/dags/dbt_project/models/silver/: silver_adzuna_cleansed.sql
airflow/dags/dbt_project/models/staging/: stg_adzuna_jobs.sql
airflow/dags/dbt_project/snapshots/: adzuna_jobs_snapshot.sql
airflow/dags/dbt_project/tests/: assert_salary_min_le_salary_max.sql
dbt_project/: dbt_project.yml
dbt_project/models/: schema.yml  unittesting.yml
dbt_project/models/dim/: dim_company_cleansed.sql  dim_date.sql  dim_location_cleansed.sql
dbt_project/models/fct/: fct_job_postings_cleansed.sql
dbt_project/models/silver/: silver_adzuna_cleansed.sql
src/ingestion/: ping_adzuna.py
src/snowflake/: dim_date.sql
